syntax = "proto3";

option csharp_namespace = "RentalService.Infrastructure.Grpc";

service UserService{
	rpc GetUserEmail (GetUserEmailRequest) returns (UserEmailResponse);
}

message GetUserEmailRequest {
	string user_id = 1;
}

message UserEmailResponse {
	string email = 1;
}